platform_versioned_docs/version-4.2.0/api/_partials/resources/projects/reference.mdx

import Metadata from "../metadata/reference.mdx"

<Metadata />



<details className="config-field" data-expandable="true">
<summary>

## `spec` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `displayName` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-displayName}

DisplayName is the name that should be displayed in the UI

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `description` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-description}

Description describes an app

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `owner` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-owner}

Owner holds the owner of this object

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `user` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-owner-user}

User specifies a Loft user.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `team` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-owner-team}

Team specifies a Loft team.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `quotas` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-quotas}

Quotas define the quotas inside the project

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `project` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-quotas-project}

Project holds the quotas for the whole project

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `user` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-quotas-user}

User holds the quotas per user / team

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `allowedClusters` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-allowedClusters}

AllowedClusters are target clusters that are allowed to target with
environments.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-allowedClusters-name}

Name is the name of the cluster that is allowed to create an environment in.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `allowedRunners` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-allowedRunners}

AllowedRunners are target runners that are allowed to target with
DevPod environments.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-allowedRunners-name}

Name is the name of the runner that is allowed to create an environment in.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `allowedTemplates` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-allowedTemplates}

AllowedTemplates are the templates that are allowed to use in this
project.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `kind` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-allowedTemplates-kind}

Kind of the template that is allowed. Currently only supports DevPodWorkspaceTemplate, VirtualClusterTemplate & SpaceTemplate

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `group` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-allowedTemplates-group}

Group of the template that is allowed. Currently only supports storage.loft.sh

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-allowedTemplates-name}

Name of the template

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `isDefault` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-allowedTemplates-isDefault}

IsDefault specifies if the template should be used as a default

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `requireTemplate` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-requireTemplate}

RequireTemplate configures if a template is required for instance creation.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `disabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-requireTemplate-disabled}

If true, all users within the project will be allowed to create a new instance without a template.
By default, only admins are allowed to create a new instance without a template.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `requirePreset` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-requirePreset}

RequirePreset configures if a preset is required for instance creation.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `disabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-requirePreset-disabled}

If true, all users within the project will not be allowed to create a new instance without a preset.
By default, all users are allowed to create a new instance without a preset.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `members` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-members}

Members are the users and teams that are part of this project

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `kind` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-members-kind}

Kind is the kind of the member. Currently either User or Team

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `group` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-members-group}

Group of the member. Currently only supports storage.loft.sh

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-members-name}

Name of the member

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `clusterRole` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-members-clusterRole}

ClusterRole is the assigned role for the above member

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `access` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-access}

Access holds the access rights for users and teams

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-access-name}

Name is an optional name that is used for this access rule

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `verbs` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-access-verbs}

Verbs is a list of Verbs that apply to ALL the ResourceKinds and AttributeRestrictions contained in this rule. VerbAll represents all kinds.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `subresources` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-access-subresources}

Subresources defines the sub resources that are allowed by this access rule

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `users` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-access-users}

Users specifies which users should be able to access this secret with the aforementioned verbs

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `teams` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-access-teams}

Teams specifies which teams should be able to access this secret with the aforementioned verbs

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `namespacePattern` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-namespacePattern}

NamespacePattern specifies template patterns to use for creating each space or virtual cluster's namespace

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `space` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-namespacePattern-space}

Space holds the namespace pattern to use for space instances

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `virtualCluster` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-namespacePattern-virtualCluster}

VirtualCluster holds the namespace pattern to use for virtual cluster instances

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `argoCD` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD}

ArgoIntegration holds information about ArgoCD Integration

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-enabled}

Enabled indicates if the ArgoCD Integration is enabled for the project -- this knob only
enables the syncing of virtualclusters, but does not enable SSO integration or project
creation (see subsequent spec sections!).

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `cluster` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-cluster}

Cluster defines the name of the cluster that ArgoCD is deployed into -- if not provided this
will default to 'loft-cluster'.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `virtualClusterInstance` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-virtualClusterInstance}

VirtualClusterInstance defines the name of *virtual cluster* (instance) that ArgoCD is
deployed into. If provided, Cluster will be ignored and Loft will assume that ArgoCD is
running in the specified virtual cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-namespace}

Namespace defines the namespace in which ArgoCD is running in the cluster.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `sso` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-sso}

SSO defines single-sign-on related values for the ArgoCD Integration. Enabling SSO will allow
users to authenticate to ArgoCD via Loft.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-sso-enabled}

Enabled indicates if the ArgoCD SSO Integration is enabled for this project. Enabling this
will cause Loft to configure SSO authentication via Loft in ArgoCD. If Projects are *not*
enabled, all users associated with this Project will be assigned either the 'read-only'
(default) role, *or* the roles set under the AssignedRoles field.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `host` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-sso-host}

Host defines the ArgoCD host address that will be used for OIDC authentication between loft
and ArgoCD. If not specified OIDC integration will be skipped, but vclusters/spaces will
still be synced to ArgoCD.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `assignedRoles` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-sso-assignedRoles}

AssignedRoles is a list of roles to assign for users who authenticate via Loft -- by default
this will be the `read-only` role. If any roles are provided this will override the default
setting.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `project` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project}

Project defines project related values for the ArgoCD Integration. Enabling Project
integration will cause Loft to generate and manage an ArgoCD appProject that corresponds to
the Loft Project.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-enabled}

Enabled indicates if the ArgoCD Project Integration is enabled for this project. Enabling
this will cause Loft to create an appProject in ArgoCD that is associated with the Loft
Project. When Project integration is enabled Loft will override the default assigned role
set in the SSO integration spec.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `metadata` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-metadata}

Metadata defines additional metadata to attach to the loft created project in ArgoCD.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `extraAnnotations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-metadata-extraAnnotations}

ExtraAnnotations are optional annotations that can be attached to the project in ArgoCD.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `extraLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-metadata-extraLabels}

ExtraLabels are optional labels that can be attached to the project in ArgoCD.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `description` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-metadata-description}

Description to add to the ArgoCD project.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `sourceRepos` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-sourceRepos}

SourceRepos is a list of source repositories to attach/allow on the project, if not specified
will be "*" indicating all source repositories.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `roles` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-roles}

Roles is a list of roles that should be attached to the ArgoCD project. If roles are provided
no loft default roles will be set. If no roles are provided *and* SSO is enabled, loft will
configure sane default values.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-roles-name}

Name of the ArgoCD role to attach to the project.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `description` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-roles-description}

Description to add to the ArgoCD project.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `rules` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-roles-rules}

Rules ist a list of policy rules to attach to the role.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `action` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-roles-rules-action}

Action is one of "*", "get", "create", "update", "delete", "sync", or "override".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `application` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-roles-rules-application}

Application is the ArgoCD project/repository to apply the rule to.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `permission` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-roles-rules-permission}

Allow applies the "allow" permission to the rule, if allow is not set, the permission will
always be set to "deny".

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `groups` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-argoCD-project-roles-groups}

Groups is a list of OIDC group names to bind to the role.

</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `vault` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-vault}

VaultIntegration holds information about Vault Integration

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-vault-enabled}

Enabled indicates if the Vault Integration is enabled for the project -- this knob only
enables the syncing of secrets to or from Vault, but does not setup Kubernetes authentication
methods or Kubernetes secrets engines for vclusters.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `address` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-vault-address}

Address defines the address of the Vault instance to use for this project.
Will default to the `VAULT_ADDR` environment variable if not provided.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `skipTLSVerify` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-vault-skipTLSVerify}

SkipTLSVerify defines if TLS verification should be skipped when connecting to Vault.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-vault-namespace}

Namespace defines the namespace to use when storing secrets in Vault.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `auth` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-vault-auth}

Auth defines the authentication method to use for this project.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `token` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-vault-auth-token}

Token defines the token to use for authentication.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `tokenSecretRef` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-vault-auth-tokenSecretRef}

TokenSecretRef defines the Kubernetes secret to use for token authentication.
Will be used if `token` is not provided.

Secret data should contain the `token` key.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-vault-auth-tokenSecretRef-name}

Name of the referent.
This field is effectively required, but due to backwards compatibility is
allowed to be empty. Instances of this type with an empty value here are
almost certainly wrong.
More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-vault-auth-tokenSecretRef-key}

The key of the secret to select from.  Must be a valid secret key.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `optional` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-vault-auth-tokenSecretRef-optional}

Specify whether the Secret or its key must be defined

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `syncInterval` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-vault-syncInterval}

SyncInterval defines the interval at which to sync secrets from Vault.
Defaults to `1m.`
See https://pkg.go.dev/time#ParseDuration for supported formats.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `rancher` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-rancher}

RancherIntegration holds information about Rancher Integration

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-rancher-enabled}

Enabled indicates if the Rancher Project Integration is enabled for this project.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `projectRef` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-rancher-projectRef}

ProjectRef defines references to rancher project, required for syncMembers and syncVirtualClusters.syncMembers

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `cluster` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-rancher-projectRef-cluster}

Cluster defines the Rancher cluster ID
Needs to be the same id within Loft

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `project` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-rancher-projectRef-project}

Project defines the Rancher project ID

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `importVirtualClusters` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-rancher-importVirtualClusters}

ImportVirtualClusters defines settings to import virtual clusters to Rancher on creation

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `roleMapping` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-rancher-importVirtualClusters-roleMapping}

RoleMapping indicates an optional role mapping from a rancher project role to a rancher cluster role. Map to an empty role to exclude users and groups with that role from
being synced.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `syncMembers` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-rancher-syncMembers}

SyncMembers defines settings to sync Rancher project members to the loft project

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-rancher-syncMembers-enabled}

Enabled indicates whether to sync rancher project members to the loft project.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `roleMapping` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-rancher-syncMembers-roleMapping}

RoleMapping indicates an optional role mapping from a rancher role to a loft role. Map to an empty role to exclude users and groups with that role from
being synced.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `devPod` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod}

DevPod holds DevPod specific configuration for project

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `git` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-git}

Git defines additional git related settings like credentials

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `token` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-git-token}

Token defines the token to use for authentication.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `tokenSecretRef` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-git-tokenSecretRef}

TokenSecretRef defines the project secret to use for token authentication.
Will be used if `Token` is not provided.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-git-tokenSecretRef-name}

Name of the referent.
This field is effectively required, but due to backwards compatibility is
allowed to be empty. Instances of this type with an empty value here are
almost certainly wrong.
More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-git-tokenSecretRef-key}

The key of the secret to select from.  Must be a valid secret key.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `optional` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-git-tokenSecretRef-optional}

Specify whether the Secret or its key must be defined

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `ssh` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-ssh}

SSH defines additional ssh related settings like private keys, to be
specified as base64 encoded strings.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `token` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-ssh-token}

Token defines the private ssh key to use for authentication,
this is a base64 encoded string.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `tokenSecretRef` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-ssh-tokenSecretRef}

TokenSecretRef defines the project secret to use as private ssh key for authentication.
Will be used if `Token` is not provided.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-ssh-tokenSecretRef-name}

Name of the referent.
This field is effectively required, but due to backwards compatibility is
allowed to be empty. Instances of this type with an empty value here are
almost certainly wrong.
More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
TODO: Drop `kubebuilder:default` when controller-gen doesn't need it https://github.com/kubernetes-sigs/kubebuilder/issues/3896.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-ssh-tokenSecretRef-key}

The key of the secret to select from.  Must be a valid secret key.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `optional` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-ssh-tokenSecretRef-optional}

Specify whether the Secret or its key must be defined

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `fallbackImage` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#spec-devPod-fallbackImage}

FallbackImage defines an image all workspace will fall back to if no devcontainer.json could be detected

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

## `status` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status}



</summary>




<details className="config-field" data-expandable="true">
<summary>

### `quotas` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas}

Quotas holds the quota status

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `project` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-project}

Project is the quota status for the whole project

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `limit` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-project-limit}

Limit is the amount limited, copied from spec.quotas.project

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `used` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-project-used}

Used is the amount currently used across all clusters

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `clusters` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">&#123;key: object&#125;</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-project-clusters}

Clusters holds the used amount per cluster. Maps cluster name to used resources

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `used` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-project-clusters-used}

Used is the amount currently used. Maps resource name, such as pods, to their
used amount.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `user` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-user}

User is the quota status for each user / team. An example status
could look like this:
status:
  quotas:
    user:
      limit:
        pods: "10"
        spaces: "5"
      users:
        admin:
          used:
            spaces: "3"  # (- calculated in our apiserver
            pods: "8"    # (- the sum calculated from clusters
      clusters:
        cluster-1:  # (- populated by agent from cluster-1
          users:
            admin:
              pods: "3"
        cluster-2:
          users:
            admin:
              pods: "5"

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `limit` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-user-limit}

Limit is the amount limited per user / team

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `used` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-user-used}

Used is the used amount per user / team

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `users` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-user-used-users}

Users is a mapping of users to used resources

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `teams` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-user-used-teams}

Teams is a mapping of teams to used resources

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `clusters` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">&#123;key: object&#125;</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-user-clusters}

Clusters holds the used amount per cluster. Maps cluster name to used resources

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `users` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-user-clusters-users}

Users is a mapping of users to used resources

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `teams` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-quotas-user-clusters-teams}

Teams is a mapping of teams to used resources

</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `conditions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#status-conditions}

Conditions holds several conditions the project might be in

</summary>



</details>


</details>
